# envoy-dynamic-modules

./: .bazelrc  .clang-tidy  .gitignore  BUILD  README.md  WORKSPACE  compdb.py
.devcontainer/: devcontainer.json
.github/workflows/: Dockerfile.base_container  Dockerfile.buildcontainer  Dockerfile.envoy  base_containers.yaml  buildcontainers.yaml  commit.yaml
abi/: BUILD  abi.h
bazel/: envoy_version.bzl  repositories.bzl  workspace_status_command.sh
sdks/conformance-test/: BUILD  README.md  envoy.yaml  go.mod  main.go
sdks/go/: .gitignore  Makefile  README.md  go.mod
sdks/rust/: BUILD  Cargo.toml  LICENSE  Makefile  abi.h  build.rs
sdks/rust/example/: envoy.yaml  example.rs
sdks/rust/src/: abi.h  lib.rs
source/: BUILD  abi.cc  dynamic_module.cc  dynamic_module.h  factory.cc  filter.cc  filter.h  http_dynamic_module.cc  http_dynamic_module.h
source/extensions/dynamic_modules/sdks/rust/: Cargo.toml  README.md
source/extensions/dynamic_modules/sdks/rust/example/: example.rs
source/extensions/dynamic_modules/sdks/rust/src/: lib.rs
test/: BUILD  abi_impl_test.cc  abi_test.cc  compare_abi_headers.sh  dynamic_module_test.cc  filter_test.cc  integration_test.cc  test_util.h
test/test_programs/: BUILD  do_not_close.c  get_body.c  get_headers.c  http_filter_init_fail.c  init.c  init_fail.c  integration_test_bodies.c  integration_test_headers.c  integration_test_local_response.c  manipulate_body.c  no_init.c  program_init_fail.c  (+3 more)
x/: BUILD  abi.cc  abi.h  abi_impl.cc  config.proto  dynamic_module.cc  dynamic_module.h  factory.cc  filter.cc  filter.h
(+95 files in other folders)
