[package]
name = "envoy-dynamic-modules-rust-sdk"
version = "0.1.1"
edition = "2021"
authors = ["Takeshi Yoneda <t.y.mathetake@gmail.com>"]
description = "Envoy Proxy Dynamic Modules Rust SDK"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/mathetake/envoy-dynamic-modules"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
bindgen = "0.65.1"

[lib]

[[example]]
crate-type = ["cdylib"]
name = "example"
path = "example/example.rs"
